--- a/Basic2/index.html
+++ b/Basic2/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <header>
-      <img src="./src/Pictures/game-logo.png" alt="game-logo">
+      <img class="gamelogo" src="./src/Pictures/game-logo.png" alt="game-logo">
       <h1>Tic Tac Toe</h1>
     </header>
     <script type="module" src="/src/main.jsx"></script>
